src/components/PageComponent/ProductPage/ArticlePage.css
.ArticlePage__Category {
  margin-top: 1em;
  color: gray;
}
.ArticlePage__wrap > * {
  margin-top: 10px;
  margin-bottom: 10px;
}
.ArticlePage__wrap{
  width: 80%;
}
.ArticlePage__User {
  margin-bottom: 1em;
}
@media(max-width:768px){
  .ArticlePage__title{
    font-size:28px;
    word-break: keep-all;
  }
}
.ArticlePage__Images_wrap {
  overflow-x: auto;
  width: min-content;
}
.ArticlePage__Images {
  display: flex;
  width: fit-content;
}
.ArticlePage__Image {
  width: 200px;
  height: 200px;
  background: gray;
  margin: 0 1em;
}

.ArticlePage__Text {
  max-width: 318px;
  word-break: break-all;
}
.ArticlePage__Nickname {
  display: flex;
  align-items: center;
}
.ArticlePage__Box {
  display: flex;
}
.ArticlePage__Box > * {
  margin-right: 10px;
  padding: 10px;
  box-shadow: 1px 1px 0.2px #ddd;
  border-radius: 10px;
}

